syntax = "proto3";

package turnly.channels.v1.widgets;

import "common.proto";

message Widget {
  string id = 1;
  string name = 2;
  string device_id = 3;
  repeated string origins = 4;
  string position = 5;
  bool open_by_default = 6;
  bool show_fullscreen = 7;
  bool show_close_button = 8;
  string organization_id = 9;
}

message GetWidgetResponse {
  Widget data = 1;
  turnly.common.v1.Meta meta = 2;
}
